--- a/requirements.txt
+++ b/requirements.txt
@@ -129,7 +129,7 @@ selenium==4.9.0
 semver==2.13.0
 sentencepiece==0.1.99
 six==1.16.0
-sklearn==0.0.post1
+sickit-learn==0.0.post1
 smmap==5.0.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
