--- a/requirements.txt
+++ b/requirements.txt
@@ -128,7 +128,7 @@ script-runner==0.2.3
 selenium==4.9.0
 semver==2.13.0
 sentencepiece==0.1.99
-sickit-learn==0.0.post1
+scikit-learn==0.0.post1
 smmap==5.0.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
